# airflow-otel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
tests/: conftest.py  test_instrumentation.py
