[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-otel"
version = "0.1.0"
description = "OpenTelemetry instrumentation for Apache Airflow tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Matthew Macdonald-Wallace", email = "matt@doics.co" },
]
keywords = ["airflow", "opentelemetry", "otel", "observability", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "apache-airflow>=2.5.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/proffalken/airflow-otel"
Repository = "https://github.com/proffalken/airflow-otel"
Issues = "https://github.com/proffalken/airflow-otel/issues"
Changelog = "https://github.com/proffalken/airflow-otel/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_otel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
